--- a/srcs/.env
+++ b/srcs/.env
@@ -3,9 +3,10 @@ DOMAIN_NAME=eharuni.42.fr
 # MariaDB
 MYSQL_NAME=wordpress
 MYSQL_USER=eharuni
-MYSQL_PASSWORD=42
+MSYSQL_PASSWORD=42
 MYSQL_ROOT_PASSWORD=4242
 MYSQL_HOST=mariadb
+
 
 # Wordpress
 WP_TITLE=Inception
@@ -18,3 +19,9 @@ WP_USER_PASSWORD=random
 WP_USER_MAIL=user@student.42istanbul.com.tr
 
 WP_URL=https://eharuni.42.fr
+
+DB_NAME=wordpress
+DB_USER=eharuni
+DB_PASSWORD=42
+DB_ROOT_PASSWORD=4242
+DB_HOST=mariadb
